--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,8 +16,9 @@ h1 {
     text-transform: uppercase;
     letter-spacing: .3rem;
     text-align: center;
-    margin-top: 2rem;
+    flex-grow: 1;
 }
+
 h2 {
     font-weight: 400;
 }
@@ -25,16 +26,26 @@ h2 {
 body {
     background-color: black;
     color: white;
-    height: 10vh;
+}
+
+footer,
+header {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+}
+
+header > nav {
+    margin-left: auto;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 2rem;
-    min-height: 90vh;
+    min-height: 100vh;
 }
 
 nav {
@@ -51,18 +62,11 @@ nav > * {
     transition: all .5s ease;
 }
 
+.current,
 nav > *:hover {
     border: 1px solid white;
     background-color: white;
     color: black;
     padding: 1rem;
     scale: 1.1;
-}
-
-footer {
-    height: 10vh;
-    border-top: 1px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
