--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -23,6 +23,11 @@ h2 {
     font-weight: 400;
 }
 
+p.subtitle {
+    font-style: italic;
+    margin-top: .5rem;
+}
+
 body {
     background-color: black;
     color: white;
@@ -30,8 +35,6 @@ body {
 
 footer,
 header {
-    display: flex;
-    justify-content: center;
     padding: 2rem;
 }
 
@@ -40,6 +43,8 @@ header {
 }
 
 footer {
+    display: flex;
+    justify-content: center;
     margin-top: auto;
 }
 
