--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -46,6 +46,7 @@ footer {
     display: flex;
     justify-content: center;
     margin-top: auto;
+    gap: 1rem;
 }
 
 header > nav {
@@ -61,6 +62,7 @@ main {
     min-height: 100vh;
 }
 
+footer > a,
 nav {
     display: flex;
     justify-content: center;
@@ -71,6 +73,7 @@ nav {
 
 nav > * {
     border: 1px solid white;
+    background-color: black;
     padding: 1rem;
     transition: all .5s ease;
     border-radius: 5px;
@@ -79,8 +82,21 @@ nav > * {
 .current,
 nav > *:hover {
     border: 1px solid white;
-    background-color: white;
-    color: black;
+    background-color: #6C63FF;
     padding: 1rem;
     scale: 1.1;
+}
+
+footer > a {
+    transition: all .5s ease;
+}
+
+footer > a:hover {
+    scale: 1.1;
+}
+.index_img {
+    /* position: absolute; */
+    width: 50vh;
+    max-height: 400px;
+    z-index: -1;
 }
